--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: qRAT
 Title: qPCR relative expression analysis tool
-Version: 0.1.3
+Version: 0.1.4
 Authors@R: 
     person("Daniel", "Flatschacher", , "daniel.flatschacher@uibk.ac.at", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8221-9695"))
-Description: qRAT is
+Description: qRAT is a tool for the relative quantification of real-time quantitative PCR data analysis
 License: `use_mit_license()`
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
