--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(shinyLink)
 export(qRAT)
 import(ggplot2)
 import(shiny)
+import(waiter)
 importFrom(DT,JS)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
